--- a/pro1/ins.html
+++ b/pro1/ins.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="sty.css">
-	<link rel="stylesheet" href="960_12_col.css">
-	<link rel="stylesheet" href="reset">
-	<link rel="stylesheet" href="text">
+	<link rel="stylesheet" href="CSS/sty.css">
+	<link rel="stylesheet" href="CSS/960_12_col.css">
+	<link rel="stylesheet" href="CSS/reset">
+	<link rel="stylesheet" href="CSS/text">
 	<title>Institution</title>
 </head>
 <body>
