--- a/pro1/portfolio.html
+++ b/pro1/portfolio.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="por.css">
-	<link rel="stylesheet" href="960_12_col.css">
-	<link rel="stylesheet" href="reset">
-	<link rel="stylesheet" href="text">
+	<link rel="stylesheet" href="CSS/por.css">
+	<link rel="stylesheet" href="CSS/960_12_col.css">
+	<link rel="stylesheet" href="CSS/reset">
+	<link rel="stylesheet" href="CSS/text">
 	<title>Institution</title>
 	<style>
 table, td, th {
